no storage commit2

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 :root {
-    --dark-color-a: #667aff;
-    --dark-color-b: #7386ff;
+    --dark-color-a: #1e6d7c;
+    --dark-color-b: #094255;
     --light-color: #e6e9ff;
     --success-color: #5cb85c;
     --error-color: #d9534f;
